FIX - Fixed bug where images could break out of the container

--- a/app/styles/foundation/_attributes.scss
+++ b/app/styles/foundation/_attributes.scss
@@ -44,6 +44,7 @@
     
     > img { 
         width: 100%; 
+        max-width: none;
 
         @include breakpoint('mama-bear'){
             width: 1080px;
