--- a/app/styles/foundation/_base.scss
+++ b/app/styles/foundation/_base.scss
@@ -83,6 +83,10 @@ a {
     }
 }
 
+img {
+    max-width: 100%;
+}
+
 
 // -------------------------------------
 //   Inline Content
