--- a/app/styles/modules/_post.scss
+++ b/app/styles/modules/_post.scss
@@ -45,10 +45,7 @@
         ol li { 
             list-style-type: decimal;
         }
-        
-        // Images
-        img { max-width: 100%; }
-        
+
         // Figcaptions
         figcaption {
             text-align: center;
